fixed dotted line on smaller screens

--- a/src/components/_card-container.scss
+++ b/src/components/_card-container.scss
@@ -85,7 +85,8 @@
   &:before{
     content: "";
     position: absolute;
-    right: 355px;
+    left: 50%;
+    margin-left: 200px;
     top: 25px;
 
     border-left: 1px dashed rgba($white, 0.25);
