--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -9,7 +9,15 @@
 @import 'accordion';
 
 
-
+html{
+  width: 100%;
+  //background-color: red;
+  body{
+    min-width: 100%;
+    //background-color: blue;
+    position: absolute;
+  }
+}
 
 
 
